@startuml

title __VIEW's Class Diagram__\n

  namespace client.cli {
    namespace view {
      class client.cli.view.CliInputReader {
          - in : Scanner
          + requestCommand()
          + requestInt()
          + requestString()
          ~ CliInputReader()
      }
    }
  }
  

  namespace client.cli {
    namespace view {
      class client.cli.view.CliView {
          + CliView()
          + ack()
          + acquireConnection()
          + acquireConnectionMethod()
          + acquireToken()
          + acquireUsername()
          + authMethod()
          + chatMessage()
          + close()
          + error()
          + getListener()
          + isReachable()
          + nextCommand()
          + notifyEvent()
          + onGameBoardUpdate()
          + onKillShotTrackUpdate()
          + onPcBoardUpdate()
          + onPcUpdate()
          + onSquareUpdate()
          + printMessage()
          + request()
          + resumeGame()
          + winners()
      }
    }
  }
  

  namespace client.cli {
    namespace view {
      interface client.cli.view.CommandParser {
          {static} + executeCommand()
      }
    }
  }
  

  client.cli.view.CliInputReader .up.|> client.view.InputReader
  client.cli.view.CliView -up-|> client.view.AbstractView
  client.cli.view.CliView o-- client.view.InputReader : inputReader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
